ocp/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lendtech-repayment-api
spec:
  selector:
    matchLabels:
      app: lendtech-repayment-api
  replicas: 1
  template:
    metadata:
      labels:
        app: lendtech-repayment-api
    spec:
      volumes:
      - name: logback-mount
        configMap:
          name: lendtech-repayment-api-logback-configmap
          defaultMode: 420
      containers:
        - name: lendtech-repayment-api
          image: docker.io/kirwa9431/lendtech-repayment-api:wednesday
          ports:
            - containerPort: 8080
          volumeMounts:
          - name: logback-mount
            mountPath: /mnt/logback/
          imagePullPolicy: IfNotPresent
