ocp/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lendtech-repayment-api-service
spec:
  selector:
    app: lendtech-repayment-api
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
