ocp/app-sroute.yml
# oc create route edge --service=pesalink-common-receiver-service --cert=domain.crt --key=domain.key  
# oc create route reencrypt --service=frontend --cert=tls.crt --key=tls.key --dest-ca-cert=destca.crt --ca-cert=ca.crt --hostname=www.example.com  

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: lendtech-repayment-api
spec:
  to:
    kind: Service
    name: lendtech-repayment-api-service
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIDvDCCAqQCCQDf0wrwZ4ho2DANBgkqhkiG9w0BAQsFADCBnzELMAkGA1UEBhMC
[...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQDOWF5sb4Y42HmN
[...]
      SF2HbYreoKTkxG4W0Wy8ViOLfg==
      -----END PRIVATE KEY-----
    wildcardPolicy: None
